Fixed the navbar to the top position so that it is visible at the top of the page while user scrolls down.

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -7,6 +7,8 @@ nav {
   align-items: center;
   position:absolute;
   width: 100%;
+  position: fixed;
+  top: 0;
 }
 
 span {
